feat(people): implement independent Server Names backend
